<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/txt_domestic_violence_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/domestic_violence_prevention"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:textSize="22sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emergency_mail_label"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_domestic_violence_label"
        android:textColor="#000000"
        android:textSize="16sp"/>

    <TextView
        android:textSize="16sp"
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_emergency_mail_sender"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="4dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:textSize="16sp"
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backup_evidences_label"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textColor="#000000"/>

    <TextView
        android:textSize="16sp"
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_backup_evidences"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:paddingRight="8dp"
        android:paddingLeft="8dp"
        android:paddingTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:textSize="16sp"
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/government_acts"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textColor="#000000"/>

    <TextView
        android:textSize="16sp"
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_government_acts"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:paddingRight="8dp"
        android:paddingLeft="8dp"
        android:paddingTop="4dp"/>

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_bcg"/>


</android.support.constraint.ConstraintLayout>