<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.stoppagereminder.DomesticViolenceMainActivity">


    <Button
        android:id="@+id/btn_setup_backup_mail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/setup_backup_mail"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="76dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="1.0" />

    <Button
        android:id="@+id/btn_setup_emergence_mail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/setup_emergency_mail"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_setup_backup_mail"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/btn_laws"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/know_about_government_laws"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_setup_emergence_mail"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.0" />

</android.support.constraint.ConstraintLayout>
